--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Merriweather&family=Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/button.css">
 </head>
 <body>
     <header>
@@ -16,10 +17,15 @@
     </header>
     <main>
         <section class="banner">
-            <h1>PERSONALIZADA</h1>
-            <img src="imagens/banner-mobile.png" alt="Banner-mobile">
-            <p>NA NOSSA LOJA VOCÊ PODE FAZER UM PEDIDO DE UMA CAMISA DA FORMA QUE DESEJAR, EXALTANDO SUAS INDIVIDUALIDADES COM UM ESTILO ÚNICO!</p>
+            <h1>CAMISA PERSONALIZADA</h1>
+            <img src="imagens/personalizada.png" alt="Banner-mobile">
+            <a href="https://lionscia.lojavirtualnuvem.com.br/produtos/camiseta-personalizada/" target="_blank" rel="external"><button class="button-28" role="button">COMPRE JÁ!</button></a>
         </section>
+        <section class="beneficios">
+            <h1>BENEFÍCIOS!</h1>
+            <h2>.ESCOLHA QUALQUER PESSOA </h2>
+        </section>
+        
 
     </main>
 </body>
