pt2, slideshow css done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Merriweather&family=Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    
     <link rel="stylesheet" href="estilos/button.css">
 </head>
 <body>
@@ -23,7 +24,16 @@
         </section>
         <section class="beneficios">
             <h1>BENEFÍCIOS!</h1>
-            <h2>.ESCOLHA QUALQUER PESSOA </h2>
+            <h2>ESCOLHA QUALQUER PESSOA </h2>
+        </section>
+
+        <section class="slider">
+            <span class="material-symbols-outlined" id="previous">arrow_back_ios</span>         
+            <div id="img">
+                <img src="imagens/neymar.webp" alt="Neymar" id="sliderImg">
+            </div>
+            <span class="material-symbols-outlined" id="next">arrow_forward_ios</span>
+            <script src="scripts/slider.js"></script>
         </section>
         
 
