mobile and tablet version css done,  also fix slider aceleration problem

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos/stylebase.css">
     <link rel="stylesheet" href="estilos/mobile.css">
+    <link rel="stylesheet" href="estilos/tablet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Merriweather&family=Sriracha&display=swap" rel="stylesheet">
@@ -18,7 +20,7 @@
     </header>
     <main>
         <section class="banner">
-            <h1>CAMISA PERSONALIZADA</h1>
+            <h1 id="banner-tittle">CAMISA PERSONALIZADA</h1>
             <img src="imagens/personalizada.png" alt="Banner-mobile">
             <a href="https://lionscia.lojavirtualnuvem.com.br/produtos/camiseta-personalizada/" target="_blank" rel="external"><button class="button-28" role="button">COMPRE JÁ!</button></a>
         </section>
@@ -35,6 +37,36 @@
             <span class="material-symbols-outlined" id="next">arrow_forward_ios</span>
             <script src="scripts/slider.js"></script>
         </section>
+        <section class="beneficios">
+            <h2>TENHA FRASES PERSONALIZADAS</h2>
+            <img src="imagens/neymarback.webp" alt="neymar-back-shirt">
+        </section>
+        <section class="modelos">
+            <h1>MODELOS</h1>
+            <h2>ESTAMPA FRONTAL</h2>
+            <img src="imagens/yunkvino.png" alt="yunk-vino">
+            <p>10% OFF</p>
+            <h2 id="modelo2">ESTAMPA FRONTAL E TRASEIRA</h2>
+            <img src="imagens/veigh.png" alt="veigh">
+            <p>CUSTO-BENEFÍCIO</p>
+            <p id="obs">OBS: EM AMBOS MODELOS A ESCOLHA DE IMAGENS PODE SER FEITA PELO PRÓPRIO CLIENTE</p>
+        </section>
+        <section class="entrega">
+            <h1>ENTREGA</h1>
+            <p>TEMOS O PRAZO DE 3 A 5 DIAS PARA A PRODUÇÃO DA ARTE</p>
+            <span class="material-symbols-outlined">local_shipping</span>
+        </section>
+        <section class="contatos">
+            <h1>CONTATOS</h1>
+            <a href="https://www.instagram.com/lionscia/" target="_blank" rel="external"><img src="imagens/instagramiconpng.png" alt=""></a>
+            <a href="https://www.tiktok.com/@lionscia" target="_blank" rel="external"><img src="imagens/tiktokicon.png" alt="tiktok-icon"></a>
+        </section>
+        <footer>
+            <a href="https://lionscia.com.br" target="_blank" rel="external">
+                <p>Lionscia.com.br</p>
+            </a>
+            
+        </footer>
         
 
     </main>
