--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilos/stylebase.css">
     <link rel="stylesheet" href="estilos/mobile.css">
-    <link rel="stylesheet" href="estilos/tablet.css">
+    <link rel="stylesheet" href="estilos/largemobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Merriweather&family=Sriracha&display=swap" rel="stylesheet">
@@ -21,43 +21,45 @@
     <main>
         <section class="banner">
             <h1 id="banner-tittle">CAMISA PERSONALIZADA</h1>
-            <img src="imagens/personalizada.png" alt="Banner-mobile">
-            <a href="https://lionscia.lojavirtualnuvem.com.br/produtos/camiseta-personalizada/" target="_blank" rel="external"><button class="button-28" role="button">COMPRE JÁ!</button></a>
+            <div class="banner">
+                <img src="imagens/personalizada.png" alt="Banner-mobile">
+                <a href="https://lionscia.lojavirtualnuvem.com.br/produtos/camiseta-personalizada/" target="_blank" rel="external" id="buy-link-button"><button class="button-28" role="button">COMPRE JÁ!</button></a>
+            </div>
         </section>
         <section class="beneficios">
-            <h1>BENEFÍCIOS!</h1>
-            <h2>ESCOLHA QUALQUER PESSOA </h2>
+            <h2>BENEFÍCIOS!</h2>
+            <h3>ESCOLHA QUALQUER PESSOA </h3>
         </section>
 
-        <section class="slider">
+        <div class="slider">
             <span class="material-symbols-outlined" id="previous">arrow_back_ios</span>         
             <div id="img">
                 <img src="imagens/neymar.webp" alt="Neymar" id="sliderImg">
             </div>
             <span class="material-symbols-outlined" id="next">arrow_forward_ios</span>
             <script src="scripts/slider.js"></script>
-        </section>
+        </div>
         <section class="beneficios">
-            <h2>TENHA FRASES PERSONALIZADAS</h2>
+            <h3>TENHA FRASES PERSONALIZADAS</h3>
             <img src="imagens/neymarback.webp" alt="neymar-back-shirt">
         </section>
         <section class="modelos">
-            <h1>MODELOS</h1>
-            <h2>ESTAMPA FRONTAL</h2>
+            <h2>MODELOS</h2>
+            <h3>ESTAMPA FRONTAL</h3>
             <img src="imagens/yunkvino.png" alt="yunk-vino">
             <p>10% OFF</p>
-            <h2 id="modelo2">ESTAMPA FRONTAL E TRASEIRA</h2>
+            <h3 id="modelo2">ESTAMPA FRONTAL E TRASEIRA</h3>
             <img src="imagens/veigh.png" alt="veigh">
             <p>CUSTO-BENEFÍCIO</p>
             <p id="obs">OBS: EM AMBOS MODELOS A ESCOLHA DE IMAGENS PODE SER FEITA PELO PRÓPRIO CLIENTE</p>
         </section>
         <section class="entrega">
-            <h1>ENTREGA</h1>
+            <h2>ENTREGA</h2>
             <p>TEMOS O PRAZO DE 3 A 5 DIAS PARA A PRODUÇÃO DA ARTE</p>
             <span class="material-symbols-outlined">local_shipping</span>
         </section>
         <section class="contatos">
-            <h1>CONTATOS</h1>
+            <h2>CONTATOS</h2>
             <a href="https://www.instagram.com/lionscia/" target="_blank" rel="external"><img src="imagens/instagramiconpng.png" alt=""></a>
             <a href="https://www.tiktok.com/@lionscia" target="_blank" rel="external"><img src="imagens/tiktokicon.png" alt="tiktok-icon"></a>
         </section>
